Updaing index.html title

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-    <title>Typing Speed Game</title>
+    <title>Typing Game</title>
   </head>
   <body>
     <div id="root"></div>
